# 8004-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTE.md  SDK_UPGRADEABLE_ADAPTATION.md  pyproject.toml
.github/workflows/: ci.yml  release-publish.yml
.kiro/steering/: sdk-guide.md
examples/: quickstart.py
python/: README.md  pyproject.toml
python/resource/: chains.json  contract_abis.json
python/sample/: README.md  bsc_register.py  bsc_reputation_flow.py  tron_register.py  tron_reputation_flow.py
python/src/bankofai/: __init__.py
python/src/bankofai/erc_8004/core/: agent.py  contracts.py  indexer.py  models.py  subgraph_client.py  web3_client.py
python/src/bankofai/sdk_8004/: __init__.py
python/src/bankofai/sdk_8004/core/: agent.py  contracts.py  endpoint_crawler.py  feedback_manager.py  indexer.py  ipfs_client.py  models.py  oasf_validator.py  sdk.py  semantic_search_client.py  web3_client.py
sample/: README.md  bsc_register.py  tron_register.py
scripts/: check_upgradeable_events.py  hello_world_agent.py  publish.sh
src/bankofai/erc_8004/: __init__.py
src/sdk/: __init__.py  agent_protocol_client.py  agent_sdk.py  chain_utils.py  cli.py  client.py  contract_adapter.py  exceptions.py  retry.py  signer.py  utils.py
src/sdk/core/: agent.py  feedback_manager.py  sdk.py  web3_client.py
tests/: test_agent_sdk.py  test_exceptions.py  test_retry.py
ts/: README.md  package-lock.json  package.json  tsconfig.json
ts/examples/: README.md  register-bsc.ts  register-tron.ts  reputation-smoke.ts  validation-smoke.ts  wallet-smoke.ts
ts/resource/: chains.json
ts/src/: index.ts
ts/src/core/: agent.ts  chains.ts  contracts.ts  indexer.ts  sdk.ts  subgraph-client.ts  transaction-handle.ts
ts/src/models/: types.ts
