[project]
name = "trc-8004-sdk"
version = "0.1.0"
description = "TRC-8004 Agent SDK (MVP)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "TRC-8004" }]

dependencies = [
    "tronpy>=0.6.2",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.0",
]

[project.scripts]
trc8004 = "sdk.cli:main"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages]
find = { include = ["sdk"] }

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
