[project]
name = "tron-8004-sdk"
version = "0.1.0b1"
description = "TRON-8004 Agent SDK for TRON - Agent identity, reputation, and validation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{ name = "sun-protocol", email = "dev@sun.io" }]
keywords = ["tron", "blockchain", "agent", "erc-8004", "tron-8004", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "tronpy>=0.6.2",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/open-aibank/tron-8004-sdk"
Documentation = "https://github.com/open-aibank/tron-8004-sdk#readme"
Repository = "https://github.com/open-aibank/tron-8004-sdk"
Issues = "https://github.com/open-aibank/tron-8004-sdk/issues"

[project.scripts]
tron8004 = "sdk.cli:main"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 120
target-version = "py311"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
